@@ -110,6 +110,7 @@ class Help
         'configErrorMaxRuntimeBig2' => ' The configured setting was not applied!',
         'maxCallReached' => 'Maximum call-level reached. This is the last analysis for this request. To increase this value, please edit:<br />runtime => maxCall.',
         'noSourceAvailable' => 'No sourcecode available. Maybe this was an internal callback (call_user_func for example)?',
+        'configErrorHandle' => 'You have entered a wrong developer handle. Please unse only letters between a-z and A-Z.',
     );
 
     /**
